--- a/HTMLDemos/myheader.html
+++ b/HTMLDemos/myheader.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
-    <div bgcolor="cyan">
+<body bgcolor="cyan" >
+    <div align="center">
         <h1>This is header</h1>
     </div>
 </body>
